tests/negative/typecheck/mult.orng
// mult.orng:5:19: error: expected a value of type `Char`, got a value of type `Int`
// fn main()->Char {4 * 5}
//                  ^
// 
fn main()->Char {4 * 5}